Add first working pure postcss version

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
 		"normalize.css": "^7.0.0"
 	},
 	"devDependencies": {
-		"autoprefixer": "^7.2.5",
 		"babel-core": "^6.26.0",
 		"babel-loader": "^7.1.2",
 		"babel-preset-env": "^1.6.1",
@@ -39,15 +38,15 @@
 		"imagemin-mozjpeg": "^7.0.0",
 		"imagemin-pngquant": "^5.0.1",
 		"imagemin-webpack-plugin": "^1.6.1",
-		"node-sass": "^4.7.2",
-		"node-sass-magic-importer": "^5.1.0",
+		"postcss-cssnext": "^3.1.0",
 		"postcss-easy-import": "^3.0.0",
 		"postcss-flexbugs-fixes": "^3.2.0",
 		"postcss-loader": "^2.0.10",
 		"postcss-merge-rules": "^2.1.2",
+		"postcss-mixins": "^6.2.0",
+		"postcss-nested": "^3.0.0",
 		"postcss-url": "^7.3.0",
 		"postcss-utilities": "^0.7.0",
-		"sass-loader": "^6.0.6",
 		"spritesh": "^1.2.0",
 		"style-loader": "^0.19.1",
 		"uglifyjs-webpack-plugin": "^1.1.6",
