--- a/package.json
+++ b/package.json
@@ -24,35 +24,36 @@
 		"normalize.css": "^8.0.0"
 	},
 	"devDependencies": {
-		"@babel/core": "7.0.0-beta.40",
-		"@babel/preset-env": "7.0.0-beta.40",
-		"@babel/preset-stage-2": "7.0.0-beta.40",
+		"@babel/core": "7.0.0-beta.44",
+		"@babel/preset-env": "7.0.0-beta.44",
+		"@babel/preset-stage-2": "7.0.0-beta.44",
 		"babel-loader": "^8.0.0-beta.0",
 		"browser-sync": "^2.23.5",
-		"browser-sync-webpack-plugin": "^2.0.1",
-		"clean-webpack-plugin": "^0.1.17",
-		"css-loader": "^0.28.10",
+		"browser-sync-webpack-plugin": "^2.2.2",
+		"clean-webpack-plugin": "^0.1.19",
+		"css-loader": "^0.28.11",
 		"cssnano": "^3.10.0",
 		"extract-text-webpack-plugin": "^4.0.0-alpha.0",
-		"file-loader": "^1.1.6",
+		"file-loader": "^1.1.11",
 		"imagemin-mozjpeg": "^7.0.0",
-		"imagemin-pngquant": "^5.0.1",
-		"imagemin-webpack-plugin": "^2.0.0",
+		"imagemin-pngquant": "^5.1.0",
+		"imagemin-webpack-plugin": "^2.1.1",
 		"postcss-cssnext": "^3.1.0",
 		"postcss-easy-import": "^3.0.0",
 		"postcss-flexbugs-fixes": "^3.2.0",
-		"postcss-loader": "^2.1.1",
+		"postcss-loader": "^2.1.3",
 		"postcss-merge-rules": "^2.1.2",
 		"postcss-mixins": "^6.2.0",
 		"postcss-nested": "^3.0.0",
-		"postcss-url": "^7.3.1",
+		"postcss-url": "^7.3.2",
 		"postcss-utilities": "^0.8.0",
-		"spritesh": "^1.2.0",
-		"style-loader": "^0.20.2",
-		"uglifyjs-webpack-plugin": "^1.2.2",
-		"webpack": "^4.0.0",
-		"webpack-cli": "^2.0.9",
-		"webpack-spritesmith": "^0.4.0"
+		"spritesh": "^1.2.1",
+		"style-loader": "^0.20.3",
+		"uglifyjs-webpack-plugin": "^1.2.4",
+		"webpack": "^4.5.0",
+		"webpack-cli": "^2.0.14",
+		"webpack-shell-plugin": "^0.5.0",
+		"webpack-spritesmith": "^0.4.1"
 	},
 	"browserslist": [
 		"> 1%",
