--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
 	"name": "webpack-mpa",
-	"version": "1.4.0",
+	"version": "1.6.4",
 	"description": "Multi page app setup with webpack",
 	"scripts": {
 		"build": "webpack --env.NODE_ENV=production",
 		"start": "webpack --watch --env.NODE_ENV=development"
 	},
-	"keywords": [
-		"MPA",
-		"webpack",
-		"setup",
-		"multi-page"
-	],
-	"author": "Atanas Atanasov <scriptex.bg@gmail.com> (http://atanas.info)",
+	"keywords": ["MPA", "webpack", "setup", "multi-page"],
+	"author": "Atanas Atanasov <scriptex.bg@gmail.com> (https://atanas.info)",
 	"repository": "https://github.com/scriptex/webpack-mpa",
 	"bugs": {
 		"url": "https://github.com/scriptex/webpack-mpa/issues",
@@ -55,10 +50,7 @@
 		"webpack-shell-plugin": "^0.5.0",
 		"webpack-spritesmith": "^0.4.1"
 	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions"
-	],
+	"browserslist": ["> 1%", "last 2 versions"],
 	"main": "assets/scripts/main.js",
 	"private": false
 }
