Add critical css support, autoversioning and async loading of assets, new images optimization

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-	"name": "webpack-mpa",
-	"version": "1.6.4",
+	"name": "webpack-mpa-next",
+	"version": "1.6.5",
 	"description": "Multi page app setup with webpack",
 	"scripts": {
 		"build": "webpack --env.NODE_ENV=production",
-		"start": "webpack --watch --env.NODE_ENV=development"
+		"start": "webpack --watch --env.NODE_ENV=development",
+		"optisize": "optisize --src=\"./assets/images\"",
+		"critical": "critical index.php > assets/dist/critical.css"
 	},
 	"keywords": ["MPA", "webpack", "setup", "multi-page"],
 	"author": "Atanas Atanasov <scriptex.bg@gmail.com> (https://atanas.info)",
@@ -21,18 +23,17 @@
 		"@babel/core": "7.0.0-beta.44",
 		"@babel/preset-env": "7.0.0-beta.44",
 		"@babel/preset-stage-2": "7.0.0-beta.44",
+		"@three11/optisize": "^0.3.0",
 		"babel-loader": "^8.0.0-beta.0",
 		"browser-sync": "^2.23.5",
 		"browser-sync-webpack-plugin": "^2.2.2",
 		"chokidar": "^2.0.3",
 		"clean-webpack-plugin": "^0.1.19",
+		"critical": "^1.2.2",
 		"css-loader": "^0.28.11",
 		"cssnano": "^3.10.0",
 		"extract-text-webpack-plugin": "^4.0.0-alpha.0",
 		"file-loader": "^1.1.11",
-		"imagemin-mozjpeg": "^7.0.0",
-		"imagemin-pngquant": "^5.1.0",
-		"imagemin-webpack-plugin": "^2.1.1",
 		"postcss-cssnext": "^3.1.0",
 		"postcss-easy-import": "^3.0.0",
 		"postcss-flexbugs-fixes": "^3.2.0",
@@ -44,7 +45,6 @@
 		"postcss-utilities": "^0.8.0",
 		"spritesh": "^1.2.1",
 		"style-loader": "^0.20.3",
-		"uglifyjs-webpack-plugin": "^1.2.4",
 		"webpack": "^4.5.0",
 		"webpack-cli": "^2.0.14",
 		"webpack-shell-plugin": "^0.5.0",
