--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
 		"webpack": "^4.7.0",
 		"webpack-cli": "^2.1.2",
 		"webpack-shell-plugin": "^0.5.0",
-		"webpack-spritesmith": "^0.4.1"
+		"webpack-spritesmith": "^0.4.1",
+		"yargs": "^11.0.0"
 	},
 	"browserslist": ["> 1%", "last 2 versions"],
 	"main": "assets/scripts/main.js",
