--- a/package.json
+++ b/package.json
@@ -9,12 +9,7 @@
 		"critical": "critical index.php > assets/dist/critical.css",
 		"pwa": "create-pwa --icon=\"./assets/images/favicon/icon.png\""
 	},
-	"keywords": [
-		"MPA",
-		"webpack",
-		"setup",
-		"multi-page"
-	],
+	"keywords": ["MPA", "webpack", "setup", "multi-page"],
 	"author": "Atanas Atanasov <scriptex.bg@gmail.com> (https://atanas.info)",
 	"repository": "https://github.com/scriptex/webpack-mpa",
 	"bugs": {
@@ -58,10 +53,7 @@
 		"webpack-spritesmith": "^0.4.1",
 		"yargs": "^11.0.0"
 	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions"
-	],
+	"browserslist": ["> 1%", "last 2 versions"],
 	"main": "assets/scripts/main.js",
 	"private": false
 }
