--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "critical": "critical index.php > assets/dist/critical.css",
     "pwa": "create-pwa --icon=\"./assets/images/favicon/icon.png\""
   },
-  "keywords": ["MPA", "webpack", "setup", "multi-page"],
+  "keywords": [
+    "MPA",
+    "webpack",
+    "setup",
+    "multi-page"
+  ],
   "author": "Atanas Atanasov <scriptex.bg@gmail.com> (https://atanas.info)",
   "repository": "https://github.com/scriptex/webpack-mpa",
   "bugs": {
@@ -31,8 +36,8 @@
     "critical": "^1.3.0",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
-    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "file-loader": "^1.1.11",
+    "mini-css-extract-plugin": "^0.4.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-flexbugs-fixes": "^3.3.1",
     "postcss-loader": "^2.1.5",
@@ -45,14 +50,16 @@
     "postcss-utilities": "^0.8.0",
     "postcss-watch-folder": "^0.1.1",
     "spritesh": "^1.2.1",
-    "style-loader": "^0.21.0",
     "webpack": "^4.7.0",
     "webpack-cli": "^3.0.4",
     "webpack-shell-plugin": "^0.5.0",
     "webpack-spritesmith": "^0.4.1",
     "yargs": "^11.0.0"
   },
-  "browserslist": ["> 1%", "last 2 versions"],
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "main": "assets/scripts/main.js",
   "private": false
 }
