--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "critical": "^1.3.0",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
+    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "file-loader": "^1.1.11",
-    "mini-css-extract-plugin": "^0.4.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-flexbugs-fixes": "^3.3.1",
     "postcss-loader": "^2.1.5",
