--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "pwa": "create-pwa --icon=\"./assets/images/favicon/icon.png\"",
     "prod": "yarn build && yarn html && yarn critical && yarn rm-html"
   },
-  "keywords": ["MPA", "webpack", "setup", "multi-page"],
+  "keywords": [
+    "MPA",
+    "webpack",
+    "setup",
+    "multi-page"
+  ],
   "author": "Atanas Atanasov <scriptex.bg@gmail.com> (https://atanas.info)",
   "repository": "https://github.com/scriptex/webpack-mpa",
   "bugs": {
@@ -32,14 +37,14 @@
     "clean-webpack-plugin": "^0.1.19",
     "create-pwa": "^0.3.0",
     "critical": "^1.3.0",
-    "css-loader": "^0.28.11",
-    "cssnano": "^3.10.0",
+    "css-loader": "^1.0.0",
+    "cssnano": "^4.0.0",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "file-loader": "^1.1.11",
     "postcss-easy-import": "^3.0.0",
     "postcss-flexbugs-fixes": "^3.3.1",
     "postcss-loader": "^2.1.5",
-    "postcss-merge-rules": "^2.1.2",
+    "postcss-merge-rules": "^4.0.0",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^3.0.0",
     "postcss-normalize": "^6.0.0",
@@ -52,9 +57,12 @@
     "webpack-cli": "^3.0.4",
     "webpack-shell-plugin": "^0.5.0",
     "webpack-spritesmith": "^0.4.1",
-    "yargs": "^11.0.0"
+    "yargs": "^12.0.1"
   },
-  "browserslist": ["> 1%", "last 2 versions"],
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "main": "assets/scripts/main.js",
   "private": false
 }
