--- a/package.json
+++ b/package.json
@@ -29,44 +29,43 @@
     "itcss": "^0.2.0"
   },
   "devDependencies": {
-    "@babel/core": "7.0.0-rc.1",
-    "@babel/plugin-proposal-class-properties": "7.0.0-rc.1",
-    "@babel/plugin-proposal-decorators": "7.0.0-rc.1",
-    "@babel/plugin-proposal-export-namespace-from": "7.0.0-rc.1",
-    "@babel/plugin-proposal-function-sent": "7.0.0-rc.1",
-    "@babel/plugin-proposal-json-strings": "7.0.0-rc.1",
-    "@babel/plugin-proposal-numeric-separator": "7.0.0-rc.1",
-    "@babel/plugin-proposal-throw-expressions": "7.0.0-rc.1",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0-rc.1",
-    "@babel/plugin-syntax-import-meta": "7.0.0-rc.1",
-    "@babel/preset-env": "7.0.0-rc.1",
+    "@babel/core": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-proposal-decorators": "7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "7.0.0",
+    "@babel/plugin-proposal-function-sent": "7.0.0",
+    "@babel/plugin-proposal-json-strings": "7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/plugin-syntax-import-meta": "7.0.0",
+    "@babel/preset-env": "7.0.0",
     "@three11/optisize": "^0.6.0",
-    "babel-loader": "^8.0.0-beta.0",
-    "browser-sync": "^2.24.4",
+    "babel-loader": "^8.0.2",
+    "browser-sync": "^2.24.7",
     "browser-sync-webpack-plugin": "^2.2.2",
     "clean-webpack-plugin": "^0.1.19",
-    "create-pwa": "^0.3.0",
+    "create-pwa": "^0.4.0",
     "critical": "^1.3.4",
     "css-loader": "^1.0.0",
-    "cssnano": "^4.0.3",
+    "cssnano": "^4.1.0",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
-    "file-loader": "^1.1.11",
+    "file-loader": "^2.0.0",
     "postcss-easy-import": "^3.0.0",
-    "postcss-flexbugs-fixes": "^4.0.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "postcss-merge-rules": "^4.0.1",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^3.0.0",
-    "postcss-normalize": "^6.0.0",
     "postcss-preset-env": "^5.2.2",
     "postcss-url": "^8.0.0",
     "postcss-utilities": "^0.8.0",
     "postcss-watch-folder": "^0.1.1",
     "spritesh": "^1.2.1",
-    "webpack": "^4.16.1",
+    "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
     "webpack-shell-plugin": "^0.5.0",
-    "webpack-spritesmith": "^0.5.1",
+    "webpack-spritesmith": "^0.5.2",
     "yargs": "^12.0.1"
   },
   "browserslist": [
