--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
 sudo: false
 node_js:
-  - "8.9.4"
+    - '8.15.0'
 install:
-  - yarn
+    - yarn
 script:
-  - yarn build
-  - yarn optisize
-  - yarn pwa
+    - yarn build
+    - yarn optisize
+    - yarn pwa
+    - yarn lint
