--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
 		"critical": "critical index.html > assets/dist/critical.css",
 		"rm-html": "rm index.html",
 		"pwa": "create-pwa --icon=\"./assets/images/favicon/icon.png\"",
-		"prod": "yarn build && yarn html && yarn critical && yarn rm-html"
+		"prod": "yarn build && yarn html && yarn critical && yarn rm-html",
+		"lint": "yarn lint:js && yarn lint:css",
+		"lint:js": "eslint './assets/**/*.js'",
+		"lint:css": "stylelint './src/**/*.css'"
 	},
 	"keywords": [
 		"MPA",
@@ -49,6 +52,8 @@
 		"critical": "1.3.4",
 		"css-loader": "2.1.0",
 		"cssnano": "4.1.8",
+		"eslint": "^5.11.1",
+		"eslint-config-recommended": "^4.0.0",
 		"extract-text-webpack-plugin": "4.0.0-beta.0",
 		"file-loader": "3.0.1",
 		"postcss-easy-import": "3.0.0",
@@ -62,6 +67,8 @@
 		"postcss-utilities": "0.8.0",
 		"postcss-watch-folder": "0.1.2",
 		"spritesh": "1.2.1",
+		"stylelint": "^9.9.0",
+		"stylelint-config-recommended": "^2.1.0",
 		"webpack": "4.28.3",
 		"webpack-cli": "3.1.2",
 		"webpack-shell-plugin": "0.5.0",
