--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"prod": "yarn build && yarn html && yarn critical && yarn rm-html",
 		"lint": "yarn lint:js && yarn lint:css",
 		"lint:js": "eslint './assets/**/*.js'",
-		"lint:css": "stylelint './src/**/*.css'"
+		"lint:css": "stylelint assets/**/*.css"
 	},
 	"keywords": [
 		"MPA",
@@ -67,7 +67,7 @@
 		"postcss-utilities": "0.8.4",
 		"postcss-watch-folder": "1.0.0",
 		"spritesh": "1.2.1",
-		"stylelint": "9.10.1",
+		"stylelint": "10.1.0",
 		"stylelint-config-recommended": "2.2.0",
 		"webpack": "4.39.3",
 		"webpack-cli": "3.3.7",
