--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "webpack-mpa-next",
-	"version": "3.2.0",
+	"version": "3.3.0",
 	"description": "Multi page app setup with webpack",
 	"scripts": {
 		"build": "webpack --env.NODE_ENV=production",
@@ -29,7 +29,7 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"itcss": "^1.2.0"
+		"itcss": "1.3.0"
 	},
 	"devDependencies": {
 		"@babel/core": "7.6.0",
