--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
 		"pwa": "create-pwa --icon=\"./assets/images/favicon/icon.png\" --launch=\"./assets/images/favicon/launch.png\"",
 		"prod": "yarn build && yarn html && yarn critical && yarn rm-html",
 		"lint": "yarn lint:js && yarn lint:css",
-		"lint:js": "eslint './assets/**/*.js'",
-		"lint:css": "stylelint assets/**/*.css"
+		"lint:js": "eslint './assets/scripts/**/*.js'",
+		"lint:css": "stylelint assets/styles/**/*.css"
 	},
 	"keywords": [
 		"MPA",
@@ -47,7 +47,7 @@
 		"babel-loader": "8.1.0",
 		"browser-sync": "2.26.7",
 		"browser-sync-webpack-plugin": "2.2.2",
-		"clean-webpack-plugin": "1.0.1",
+		"clean-webpack-plugin": "3.0.0",
 		"create-pwa": "2.3.0",
 		"critical": "1.3.9",
 		"css-loader": "3.5.3",
