--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"itcss": "1.6.0"
+		"itcss": "1.7.0"
 	},
 	"devDependencies": {
 		"@babel/core": "7.12.3",
@@ -48,12 +48,20 @@
 		"file-loader": "6.2.0",
 		"mini-css-extract-plugin": "1.3.1",
 		"postcss": "8.1.8",
+		"postcss-calc": "7.0.5",
+		"postcss-cli": "8.3.0",
+		"postcss-custom-media": "7.0.8",
+		"postcss-each": "0.10.0",
+		"postcss-each-variables": "0.3.0",
 		"postcss-easy-import": "3.0.0",
+		"postcss-extend": "1.0.5",
 		"postcss-flexbugs-fixes": "5.0.1",
+		"postcss-for": "2.1.1",
 		"postcss-loader": "4.1.0",
 		"postcss-merge-rules": "4.0.3",
 		"postcss-mixins": "6.2.3",
 		"postcss-nested": "4.2.3",
+		"postcss-normalize": "9.0.0",
 		"postcss-preset-env": "6.7.0",
 		"postcss-url": "10.1.0",
 		"postcss-utilities": "0.8.4",
