--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "webpack-mpa-next",
-	"version": "3.6.0",
+	"version": "3.6.1",
 	"description": "Multi page app setup with webpack",
 	"scripts": {
 		"build": "webpack --NODE_ENV=production",
 		"start": "webpack --watch --NODE_ENV=development",
 		"optisize": "optisize --src=\"./assets/images\"",
 		"html": "php index.php > index.html",
-		"critical": "critical index.html > assets/dist/critical.css",
+		"critical": "node critical.js",
 		"rm-html": "rm index.html",
 		"pwa": "create-pwa --icon=\"./assets/images/favicon/icon.png\" --launch=\"./assets/images/favicon/launch.png\"",
 		"prod": "yarn build && yarn html && yarn critical && yarn rm-html",
@@ -41,12 +41,12 @@
 		"clean-webpack-plugin": "1.0.1",
 		"create-pwa": "2.3.0",
 		"critical": "2.0.6",
-		"css-loader": "5.0.1",
+		"css-loader": "3.5.3",
 		"cssnano": "4.1.10",
 		"eslint": "7.17.0",
 		"eslint-config-recommended": "4.1.0",
+		"extract-text-webpack-plugin": "4.0.0-beta.0",
 		"file-loader": "6.2.0",
-		"mini-css-extract-plugin": "1.3.3",
 		"postcss": "8.2.2",
 		"postcss-calc": "8.0.0",
 		"postcss-cli": "8.3.1",
