--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "3.6.1",
 	"description": "Multi page app setup with webpack",
 	"scripts": {
-		"build": "webpack --NODE_ENV=production",
-		"start": "webpack --watch --NODE_ENV=development",
+		"build": "webpack --mode=production",
+		"start": "webpack --watch --mode=development",
 		"optisize": "optisize --src=\"./assets/images\"",
 		"html": "php index.php > index.html",
 		"critical": "node critical.js",
@@ -41,12 +41,12 @@
 		"clean-webpack-plugin": "1.0.1",
 		"create-pwa": "2.3.1",
 		"critical": "3.0.0",
-		"css-loader": "3.5.3",
+		"css-loader": "5.1.1",
 		"cssnano": "4.1.10",
 		"eslint": "7.21.0",
 		"eslint-config-recommended": "4.1.0",
-		"extract-text-webpack-plugin": "4.0.0-beta.0",
 		"file-loader": "6.2.0",
+		"mini-css-extract-plugin": "1.3.9",
 		"postcss": "8.2.7",
 		"postcss-calc": "8.0.0",
 		"postcss-cli": "8.3.1",
@@ -57,10 +57,10 @@
 		"postcss-extend": "1.0.5",
 		"postcss-flexbugs-fixes": "5.0.2",
 		"postcss-for": "2.1.1",
-		"postcss-loader": "4.2.0",
+		"postcss-loader": "5.1.0",
 		"postcss-merge-rules": "4.0.3",
-		"postcss-mixins": "6.2.3",
-		"postcss-nested": "4.2.3",
+		"postcss-mixins": "7.0.3",
+		"postcss-nested": "5.0.5",
 		"postcss-normalize": "9.0.0",
 		"postcss-preset-env": "6.7.0",
 		"postcss-url": "10.1.1",
@@ -69,9 +69,9 @@
 		"spritesh": "1.2.1",
 		"stylelint": "13.12.0",
 		"stylelint-config-recommended": "4.0.0",
-		"webpack": "4.46.0",
-		"webpack-cli": "3.3.12",
-		"webpack-shell-plugin": "0.5.0",
+		"webpack": "5.24.4",
+		"webpack-cli": "4.5.0",
+		"webpack-shell-plugin-next": "2.1.2",
 		"webpack-spritesmith": "1.1.0",
 		"yargs": "16.2.0"
 	},
