--- a/renovate.json
+++ b/renovate.json
@@ -9,5 +9,11 @@
 	"vulnerabilityAlerts": {
 		"labels": ["security"],
 		"assignees": ["@scriptex"]
-	}
+	},
+  "packageRules": [
+    {
+      "updateTypes": ["patch", "pin", "digest"],
+      "automerge": true
+    }
+  ]
 }
