--- a/.eslintrc
+++ b/.eslintrc
@@ -5,8 +5,8 @@
 	},
 	"env": {
 		"es6": true,
-		"browser": true,
-		"node": true
+		"node": true,
+		"browser": true
 	},
-	"extends": ["eslint:recommended"]
+	"extends": ["eslint:recommended", "plugin:compat/recommended"]
 }
