--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "webpack-mpa-next",
-	"version": "3.8.0",
+	"version": "3.9.0",
 	"description": "Multi page app setup with webpack",
 	"scripts": {
 		"build": "webpack --mode=production",
@@ -46,6 +46,7 @@
 		"cssnano": "5.0.7",
 		"eslint": "7.32.0",
 		"eslint-config-recommended": "4.1.0",
+		"eslint-plugin-compat": "3.12.0",
 		"file-loader": "6.2.0",
 		"mini-css-extract-plugin": "2.2.0",
 		"postcss": "8.3.6",
@@ -70,6 +71,7 @@
 		"spritesh": "1.2.1",
 		"stylelint": "13.13.1",
 		"stylelint-config-recommended": "5.0.0",
+		"stylelint-no-unsupported-browser-features": "5.0.1",
 		"svgo": "2.3.1",
 		"webpack": "5.49.0",
 		"webpack-cli": "4.7.2",
