--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"itcss": "1.8.1"
+		"itcss": "1.9.0"
 	},
 	"devDependencies": {
 		"@babel/core": "7.16.0",
 		"@babel/preset-env": "7.16.4",
 		"@three11/optisize": "1.3.0",
+		"autoprefixer": "10.4.0",
 		"babel-loader": "8.2.3",
 		"browser-sync": "2.27.7",
 		"browser-sync-webpack-plugin": "2.3.0",
@@ -51,6 +52,7 @@
 		"postcss": "8.3.11",
 		"postcss-calc": "8.0.0",
 		"postcss-cli": "9.0.2",
+		"postcss-color-mod-function": "3.0.3",
 		"postcss-custom-media": "8.0.0",
 		"postcss-each": "1.1.0",
 		"postcss-each-variables": "0.3.0",
@@ -63,7 +65,6 @@
 		"postcss-mixins": "8.1.0",
 		"postcss-nested": "5.0.6",
 		"postcss-normalize": "10.0.1",
-		"postcss-preset-env": "6.7.0",
 		"postcss-url": "10.1.3",
 		"postcss-utilities": "0.8.4",
 		"postcss-watch-folder": "2.0.0",
