--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "webpack-mpa-next",
-	"version": "3.11.0",
+	"version": "3.12.0",
 	"description": "Multi page app setup with webpack",
 	"keywords": [
 		"MPA",
@@ -12,7 +12,7 @@
 		"Multiple pages application setup",
 		"Multiple pages application boilerplate"
 	],
-	"homepage": "https://atanas.info/projects/webpack-mpa-next.html",
+	"homepage": "https://atanas.info/portfolio/open-source/webpack-mpa-next",
 	"bugs": {
 		"url": "https://github.com/scriptex/webpack-mpa-next/issues",
 		"email": "hi@atanas.info"
@@ -79,11 +79,10 @@
 		"postcss-url": "10.1.3",
 		"postcss-utilities": "0.8.4",
 		"postcss-watch-folder": "2.0.0",
-		"spritesh": "1.2.1",
 		"stylelint": "14.14.1",
 		"stylelint-config-recommended": "9.0.0",
 		"stylelint-no-unsupported-browser-features": "6.0.1",
-		"svgo": "3.0.0",
+		"svg-symbol-sprite": "1.1.0",
 		"webpack": "5.74.0",
 		"webpack-cli": "4.10.0",
 		"webpack-shell-plugin-next": "2.3.1",
